29 October 2012: Matthijs
	- Fix validation for responses with both CNAME and wildcard
	  expanded CNAME records in answer section.

8 October 2012: Wouter
	- update ldns-testpkts.c to ldns 1.6.14 version.
	- fix build of pythonmod in objdir, for unbound.py.
	- make clean and makerealclean remove generated python and docs.

5 October 2012: Wouter
	- fix build of pythonmod in objdir (thanks Jakob Schlyter).

3 October 2012: Wouter
	- fix text in unbound-anchor man page.

1 October 2012: Wouter
	- ignore trusted-keys globs that have no files (from Paul Wouters).

27 September 2012: Wouter
	- include: directive in config file accepts wildcards.  Patch from
	  Paul Wouters.  Suggested use: include: "/etc/unbound.d/conf.d/*"
	- unbound-control -q option is quiet, patch from Mariano Absatz.
	- iana portlist updated.
	- updated contrib/unbound.spec, patch from Valentin Bud.

21 September 2012: Wouter
	- chdir to / after chroot call (suggested by Camiel Dobbelaar).

17 September 2012: Wouter
	- patch_rsamd5_enable.diff: this patch enables RSAMD5 validation
	  otherwise it is treated as insecure.  The RSAMD5 algorithm is
	  deprecated (RFC6725).  The MD5 hash is considered weak for some
	  purposes, if you want to sign your zone, then RSASHA256 is an
	  uncontested hash.

30 August 2012: Wouter
	- RFC6725 deprecates RSAMD5: this DNSKEY algorithm is disabled.
	- iana portlist updated.

29 August 2012: Wouter
	- Nicer comments outgoing-port-avoid, thanks Stu (bug #465).

22 August 2012: Wouter
	- Fallback to 1472 and 1232, one fragment size without headers.

21 August 2012: Wouter
	- Fix timeouts so that when a server has been offline for a while
	  and is probed to see it works, it becomes fully available for
	  server selection again.

17 August 2012: Wouter
	- Add documentation to libunbound for default nonuse of resolv.conf.

2 August 2012: Wouter
	- trunk has 1.4.19 under development (fixes from 1 aug and 31 july
	are for 1.4.19).
	- iana portlist updated.
